# routes/api.php
@@ -38,5 +38,6 @@ Route::middleware('auth:sanctum')->group(function () {
         Route::get('/programme-entries/{programmeEntry}/geography', [ProgrammeGeographyController::class, 'index']);
         Route::get('/map/entries', [MapEntryController::class, 'index']);
         Route::get('/map/entries/export', [MapEntryController::class, 'export']);
+        Route::get('/map/entries/export/pdf', [MapEntryController::class, 'exportPdf']);
     });
 });
